syntax = "proto3";
option java_multiple_files = true;
option java_package = "servicestubs";
package grpcservice;

service Service {
  // ping server for testing service availability
  rpc isAlive(ProtoVoid) returns (TextMessage);
  // Send the image to the server by streaming
  rpc imageUpload(stream ImageChunk) returns (UploadResult);

  // Get the landmark detection result
  rpc getDetectionResult(DetectionRequest) returns (DetectionResult);

  rpc getMap(DetectionRequest) returns (MapResponse);
}

message ProtoVoid {}

message TextMessage {
  string txt = 1;
}

message ImageChunk {
  bytes imageChunk = 1;
}

message MapResponse {
  string mapURL = 1;
  ImageChunk mapImage = 2;
}

message UploadResult {
  string request_id = 1;
}

message DetectionRequest {
  string request_id = 1;
  double minConfidence = 2;
}

message DetectionResult {
  string request_id = 1;
  repeated Landmark landmarks = 2;
}

message Landmark {
  string name = 1;
  double latitude = 2;
  double longitude = 3;
  double confidence = 4;
}